--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,10 @@
 pages:
   stage: deploy
   script:
-  - echo 'Copying files to public folder'
-  cp *.js ./public
-  cp -R libraries ./public
-  cp index.html ./public
+    - echo 'Copying files to public folder'
+    - cp *.js public
+    - cp -R libraries public
+    - cp index.html public
+  artifacts:
+    paths:
+      - public
